--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,162 +10,173 @@
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
     "from openpyxl.worksheet.cell_range import CellRange\n",
     "from openpyxl.formula.translate import Translator\n",
-    "from collections import OrderedDict\n",
     "import copy\n",
     "\n",
-    "def replicate_dashboard_blocks_from_dict(\n",
+    "\n",
+    "def replicate_blocks_from_key_value(\n",
     "    file_path,\n",
     "    sheet_name,\n",
-    "    header_subheader_dict,\n",
-    "    source_block_range_sub,  # (start_col, end_col, min_row, max_row)\n",
-    "    source_block_range_header,  # (start_col, end_col, min_row, max_row)\n",
-    "    output_start_col,\n",
-    "    header_row,\n",
-    "    text_row\n",
+    "    header_template_range,     # (start_col, end_col)\n",
+    "    subheader_template_range,  # (start_col, end_col)\n",
+    "    key_value_dict,            # OrderedDict: {Header: [Sub1, Sub2, Header]}\n",
+    "    header_row=3,\n",
+    "    text_row=5\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
     "\n",
-    "    current_col_idx = column_index_from_string(output_start_col)\n",
+    "    # Template block info\n",
+    "    header_start_col, header_end_col = header_template_range\n",
+    "    sub_start_col, sub_end_col = subheader_template_range\n",
     "\n",
-    "    block_tracker = []\n",
+    "    header_start_idx = column_index_from_string(header_start_col)\n",
+    "    header_end_idx = column_index_from_string(header_end_col)\n",
+    "    sub_start_idx = column_index_from_string(sub_start_col)\n",
+    "    sub_end_idx = column_index_from_string(sub_end_col)\n",
     "\n",
-    "    for header, subheaders in header_subheader_dict.items():\n",
-    "        if subheaders:\n",
-    "            # Process each subheader first\n",
-    "            for subheader in subheaders:\n",
-    "                print(f\"🔹 Adding block for subheader: {subheader}\")\n",
+    "    num_cols_header = header_end_idx - header_start_idx + 1\n",
+    "    num_cols_sub = sub_end_idx - sub_start_idx + 1\n",
     "\n",
-    "                cell_range = paste_block(\n",
-    "                    ws, subheader,\n",
-    "                    source_block_range_sub,\n",
-    "                    current_col_idx,\n",
-    "                    header_row,\n",
-    "                    text_row\n",
-    "                )\n",
-    "                block_tracker.append({'type': 'subheader', 'label': subheader, 'cell_range': cell_range})\n",
-    "                current_col_idx += (column_index_from_string(source_block_range_sub[1]) - column_index_from_string(source_block_range_sub[0]) + 1) + 1\n",
+    "    # Place blocks after template blocks with 1 blank col in between\n",
+    "    current_col_idx = max(header_end_idx, sub_end_idx) + 2\n",
     "\n",
-    "        # Then add the header-only block\n",
-    "        print(f\"🔹 Adding block for header: {header}\")\n",
+    "    for key, values in key_value_dict.items():\n",
+    "        print(f\"🔷 Handling header: {key}\")\n",
     "\n",
-    "        cell_range = paste_block(\n",
-    "            ws, header,\n",
-    "            source_block_range_header,\n",
-    "            current_col_idx,\n",
-    "            header_row,\n",
-    "            text_row\n",
-    "        )\n",
-    "        block_tracker.append({'type': 'header', 'label': header, 'cell_range': cell_range})\n",
-    "        current_col_idx += (column_index_from_string(source_block_range_header[1]) - column_index_from_string(source_block_range_header[0]) + 1) + 1\n",
+    "        for val in values:\n",
+    "            if val == key:\n",
+    "                continue  # Skip redundant subheader same as key\n",
+    "\n",
+    "            print(f\"  ➜ Adding subheader block: {val}\")\n",
+    "\n",
+    "            # --- COPY subheader block ---\n",
+    "            for row in ws.iter_rows(\n",
+    "                min_col=sub_start_idx,\n",
+    "                max_col=sub_end_idx,\n",
+    "                min_row=1,\n",
+    "                max_row=ws.max_row\n",
+    "            ):\n",
+    "                for i, source_cell in enumerate(row):\n",
+    "                    new_col_idx = current_col_idx + i\n",
+    "                    new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
+    "\n",
+    "                    if source_cell.data_type == 'f':\n",
+    "                        orig_formula = source_cell.value\n",
+    "                        origin = source_cell.coordinate\n",
+    "                        target = new_cell.coordinate\n",
+    "                        new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
+    "                        new_cell.value = new_formula\n",
+    "                    else:\n",
+    "                        new_cell.value = source_cell.value\n",
+    "\n",
+    "                    new_cell.font = copy.copy(source_cell.font)\n",
+    "                    new_cell.border = copy.copy(source_cell.border)\n",
+    "                    new_cell.fill = copy.copy(source_cell.fill)\n",
+    "                    new_cell.number_format = copy.copy(source_cell.number_format)\n",
+    "                    new_cell.protection = copy.copy(source_cell.protection)\n",
+    "                    new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "\n",
+    "            # --- HEADER/TEXT for subheader block ---\n",
+    "            merged_start = get_column_letter(current_col_idx)\n",
+    "            merged_end = get_column_letter(current_col_idx + num_cols_sub - 1)\n",
+    "            new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
+    "\n",
+    "            for merge in list(ws.merged_cells.ranges):\n",
+    "                if CellRange(new_merge_range).coord in merge.coord:\n",
+    "                    ws.merged_cells.ranges.remove(merge)\n",
+    "\n",
+    "            ws.merge_cells(new_merge_range)\n",
+    "            ws[f\"{merged_start}{header_row}\"] = val\n",
+    "\n",
+    "            # Copy style from subheader block template\n",
+    "            source_header_cell = ws[f\"{sub_start_col}{header_row}\"]\n",
+    "            new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
+    "            new_header_cell.font = copy.copy(source_header_cell.font)\n",
+    "            new_header_cell.border = copy.copy(source_header_cell.border)\n",
+    "            new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
+    "            new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
+    "            new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
+    "            new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "\n",
+    "            # Advance for next subheader block\n",
+    "            current_col_idx += num_cols_sub + 1\n",
+    "\n",
+    "        # --- COPY header block ---\n",
+    "        print(f\"✅ Adding header block: {key}\")\n",
+    "        for row in ws.iter_rows(\n",
+    "            min_col=header_start_idx,\n",
+    "            max_col=header_end_idx,\n",
+    "            min_row=1,\n",
+    "            max_row=ws.max_row\n",
+    "        ):\n",
+    "            for i, source_cell in enumerate(row):\n",
+    "                new_col_idx = current_col_idx + i\n",
+    "                new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
+    "\n",
+    "                if source_cell.data_type == 'f':\n",
+    "                    orig_formula = source_cell.value\n",
+    "                    origin = source_cell.coordinate\n",
+    "                    target = new_cell.coordinate\n",
+    "                    new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
+    "                    new_cell.value = new_formula\n",
+    "                else:\n",
+    "                    new_cell.value = source_cell.value\n",
+    "\n",
+    "                new_cell.font = copy.copy(source_cell.font)\n",
+    "                new_cell.border = copy.copy(source_cell.border)\n",
+    "                new_cell.fill = copy.copy(source_cell.fill)\n",
+    "                new_cell.number_format = copy.copy(source_cell.number_format)\n",
+    "                new_cell.protection = copy.copy(source_cell.protection)\n",
+    "                new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "\n",
+    "        merged_start = get_column_letter(current_col_idx)\n",
+    "        merged_end = get_column_letter(current_col_idx + num_cols_header - 1)\n",
+    "        new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
+    "\n",
+    "        for merge in list(ws.merged_cells.ranges):\n",
+    "            if CellRange(new_merge_range).coord in merge.coord:\n",
+    "                ws.merged_cells.ranges.remove(merge)\n",
+    "\n",
+    "        ws.merge_cells(new_merge_range)\n",
+    "        ws[f\"{merged_start}{header_row}\"] = key\n",
+    "\n",
+    "        source_header_cell = ws[f\"{header_start_col}{header_row}\"]\n",
+    "        new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
+    "        new_header_cell.font = copy.copy(source_header_cell.font)\n",
+    "        new_header_cell.border = copy.copy(source_header_cell.border)\n",
+    "        new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
+    "        new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
+    "        new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
+    "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "\n",
+    "        current_col_idx += num_cols_header + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "\n",
-    "    print(\"✅✅ All blocks created!\")\n",
-    "    return block_tracker\n",
+    "    print(\"✅✅ All header & subheader blocks replicated successfully!\")\n",
     "\n",
     "\n",
-    "def paste_block(ws, label, source_block_range, dest_start_idx, header_row, text_row):\n",
-    "    src_start_idx = column_index_from_string(source_block_range[0])\n",
-    "    src_end_idx   = column_index_from_string(source_block_range[1])\n",
-    "    min_row       = source_block_range[2]\n",
-    "    max_row       = source_block_range[3]\n",
-    "\n",
-    "    num_cols = src_end_idx - src_start_idx + 1\n",
-    "\n",
-    "    for row in ws.iter_rows(\n",
-    "        min_col=src_start_idx,\n",
-    "        max_col=src_end_idx,\n",
-    "        min_row=min_row,\n",
-    "        max_row=max_row\n",
-    "    ):\n",
-    "        for i, source_cell in enumerate(row):\n",
-    "            new_col_idx = dest_start_idx + i\n",
-    "            new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
-    "\n",
-    "            # Copy formula with translation\n",
-    "            if source_cell.data_type == 'f':\n",
-    "                orig_formula = source_cell.value\n",
-    "                origin = source_cell.coordinate\n",
-    "                target = new_cell.coordinate\n",
-    "                new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
-    "                new_cell.value = new_formula\n",
-    "            else:\n",
-    "                new_cell.value = source_cell.value\n",
-    "\n",
-    "            # Copy style\n",
-    "            new_cell.font = copy.copy(source_cell.font)\n",
-    "            new_cell.border = copy.copy(source_cell.border)\n",
-    "            new_cell.fill = copy.copy(source_cell.fill)\n",
-    "            new_cell.number_format = copy.copy(source_cell.number_format)\n",
-    "            new_cell.protection = copy.copy(source_cell.protection)\n",
-    "            new_cell.alignment = copy.copy(source_cell.alignment)\n",
-    "\n",
-    "    # --- Merge header row cells ---\n",
-    "    merged_start = get_column_letter(dest_start_idx)\n",
-    "    merged_end = get_column_letter(dest_start_idx + num_cols - 1)\n",
-    "    new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
-    "\n",
-    "    for merge in list(ws.merged_cells.ranges):\n",
-    "        if CellRange(new_merge_range).coord in merge.coord:\n",
-    "            ws.merged_cells.ranges.remove(merge)\n",
-    "    ws.merge_cells(new_merge_range)\n",
-    "    ws[f\"{merged_start}{header_row}\"] = label\n",
-    "\n",
-    "    # --- Merge text row cells ---\n",
-    "    text_merge_range = f\"{merged_start}{text_row}:{merged_end}{text_row}\"\n",
-    "\n",
-    "    for merge in list(ws.merged_cells.ranges):\n",
-    "        if CellRange(text_merge_range).coord in merge.coord:\n",
-    "            ws.merged_cells.ranges.remove(merge)\n",
-    "    ws.merge_cells(text_merge_range)\n",
-    "    ws[f\"{merged_start}{text_row}\"] = label\n",
-    "\n",
-    "    # Style for header\n",
-    "    source_header_cell = ws[f\"{source_block_range[0]}{header_row}\"]\n",
-    "    new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
-    "    new_header_cell.font = copy.copy(source_header_cell.font)\n",
-    "    new_header_cell.border = copy.copy(source_header_cell.border)\n",
-    "    new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
-    "    new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
-    "    new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
-    "    new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
-    "\n",
-    "    # Style for text row\n",
-    "    source_text_cell = ws[f\"{source_block_range[0]}{text_row}\"]\n",
-    "    new_text_cell = ws[f\"{merged_start}{text_row}\"]\n",
-    "    new_text_cell.font = copy.copy(source_text_cell.font)\n",
-    "    new_text_cell.border = copy.copy(source_text_cell.border)\n",
-    "    new_text_cell.fill = copy.copy(source_text_cell.fill)\n",
-    "    new_text_cell.number_format = copy.copy(source_text_cell.number_format)\n",
-    "    new_text_cell.protection = copy.copy(source_text_cell.protection)\n",
-    "    new_text_cell.alignment = copy.copy(source_text_cell.alignment)\n",
-    "\n",
-    "    return f\"{merged_start}:{merged_end}\"\n",
-    "\n",
-    "\n",
-    "# Example usage\n",
+    "# ------------------------\n",
+    "# EXAMPLE USAGE:\n",
     "if __name__ == \"__main__\":\n",
-    "    # Ordered dictionary example\n",
-    "    header_subheader_dict = OrderedDict({\n",
-    "        \"Header1\": [\"Sub1\", \"Sub2\"],\n",
-    "        \"Header2\": [],\n",
-    "        \"Header3\": [\"Sub3\"]\n",
+    "    from collections import OrderedDict\n",
+    "\n",
+    "    # Example ordered keys & subheaders\n",
+    "    my_dict = OrderedDict({\n",
+    "        \"Header1\": [\"SubA\", \"SubB\", \"Header1\"],\n",
+    "        \"Header2\": [\"SubC\", \"Header2\"],\n",
+    "        \"Header3\": [\"Header3\"]\n",
     "    })\n",
     "\n",
-    "    block_tracker = replicate_dashboard_blocks_from_dict(\n",
+    "    replicate_blocks_from_key_value(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
-    "        header_subheader_dict=header_subheader_dict,\n",
-    "        source_block_range_sub=(\"V\", \"AC\", 1, 20),\n",
-    "        source_block_range_header=(\"AE\", \"AL\", 1, 15),\n",
-    "        output_start_col=\"AM\",\n",
+    "        header_template_range=(\"V\", \"AC\"),  # Example header block template\n",
+    "        subheader_template_range=(\"AE\", \"AL\"),  # Example subheader block template\n",
+    "        key_value_dict=my_dict,\n",
     "        header_row=3,\n",
-    "        text_row=4\n",
-    "    )\n",
-    "\n",
-    "    print(\"Block ranges for future reference:\", block_tracker)\n"
+    "        text_row=5\n",
+    "    )\n"
    ]
   },
   {
